[package]
# generated
name = "ipabout"
version = "0.1.0"
edition = "2021"

# added
authors = ["Kirill Bezuglyi <qoopdata@gmail.com>"]
repository = "https://github.com/qoopdata/whereis"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ifcfg = "0.1.2"
