[package]
name = "ipabout"
version = "0.1.0"
edition = "2021"
authors = ["Kirill 'fidelicura' Bezuglyi <fidelicura@gmail.com>"]
repository = "https://github.com/fidelicura/ipabout"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ifcfg = "0.1.2"
